
namespace MSFrame
{

public enum EventType
{
    E_SceneLoadChange,
}
}
